[gd_scene load_steps=2 format=3 uid="uid://4g07n77w0fvv"]

[ext_resource type="Script" uid="uid://dx6mk0x3q5e1c" path="res://scenes/ui/skill_trees_display.gd" id="1_script"]

[node name="SkillTreesDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.8)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftSidebar" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HeaderContainer" type="VBoxContainer" parent="MainContainer/LeftSidebar"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TitleLabel" type="Label" parent="MainContainer/LeftSidebar/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "SKILL TREES"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MainContainer/LeftSidebar/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "Select a skill tree"
horizontal_alignment = 1

[node name="TabsContainer" type="VBoxContainer" parent="MainContainer/LeftSidebar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabsScrollContainer" type="ScrollContainer" parent="MainContainer/LeftSidebar/TabsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabsVBox" type="VBoxContainer" parent="MainContainer/LeftSidebar/TabsContainer/TabsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="SkillTreeViewer" type="Control" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/SkillTreeViewer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 2

[node name="SkillTreeContainer" type="Control" parent="MainContainer/SkillTreeViewer/ScrollContainer"]
custom_minimum_size = Vector2(1200, 800)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NoSkillTreeLabel" type="Label" parent="MainContainer/SkillTreeViewer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Select a skill tree to view"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "âœ•"
